Added build info to UI and changed some styling