@@ -4,3 +4,12 @@
 ## Htmx tutorial
 
 https://maciejwalkowiak.com/blog/spring-boot-thymeleaf-tailwindcss
+
+
+## Local testing
+
+```bash
+mvn clean package
+
+java --enable-preview -jar -Dspring.profiles.active=dev admin-app/target/admin-app-
+```
